<resources>
    <string name="app_name">SoptSeminar</string>
    <string name="title_sopt">SOPT</string>
    <string name="field_id">아이디</string>
    <string name="field_id_hint">아이디를 입력해주세요</string>
    <string name="field_pw">비밀번호</string>
    <string name="field_pw_hint">비밀번호를 입력해주세요</string>
    <string name="login">login</string>
    <string name="login_success_toast">로그인 성공</string>
    <string name="login_fail_toast">아이디/비밀번호를 확인해주세요</string>
    <string name="title_signup">회원가입</string>
    <string name="field_name_hint">이름을 입력해주세요</string>
    <string name="signup">회원가입 완료</string>
    <string name="signup_fail_toast">입력되지 않은 정보가 있습니다</string>
</resources>
