<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_20"
        tools:context=".ui.signin.SignInActivity">

        <TextView
            android:id="@+id/tv_sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title_sopt"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_30"
            android:text="@string/field_id"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title" />

        <EditText
            android:id="@+id/et_sign_in_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_id_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_id" />

        <TextView
            android:id="@+id/tv_sign_in_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_30"
            android:text="@string/field_pw"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_sign_in_id" />

        <EditText
            android:id="@+id/et_sign_in_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_pw_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_pw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ab_sign_in_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_30"
            android:backgroundTint="@color/purple_500"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_sign_in_pw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ab_sign_in_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20"
            android:backgroundTint="@color/signup_green"
            android:text="회원가입"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/ab_sign_in_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
